# Driftwave

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: build-linux.yml  build-mac.yml  build-web.yml  build-windows.yml  build-windows.yml.disabled  ci.yml  docs.yml
.zed/: settings.json
assets/: SOURCES.txt
docs/: README.md  book.toml  custom.css  develop.md  interface.md
docs/src/: SUMMARY.md  develop.md  getting-started.md  introduction.md
docs/src/design/: interface.md  peaksjs.md  wavesurferjs.md
docs/src/prior-art/: peaksjs.md  waveformjs.md
examples/tauri/: .gitignore  README.md
examples/tauri/src/: main.js
examples/tauri/src-tauri/: .taurignore  Cargo.toml  tauri.windows.conf.json
examples/tauri/src-tauri/capabilities/: default.json
examples/tauri/src-tauri/icons/: icon.icns
examples/tauri/src-tauri/src/: commands.rs  main.rs
fmod/: VERSION.txt
js/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
js/src/: index.ts
src/: dsp.rs  fmod.rs  index.html  main.js  main.rs  mipmap.rs  player.rs
src-core/: Cargo.toml
src-core/src/: lib.rs  player.rs
src-cpal/: Cargo.toml
src-cpal/src/: player.rs
src-fmod/: Cargo.toml  build.rs
src-fmod/src/: dsp.rs  lib.rs  player.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: dsp.rs  fmod.rs  mipmap.rs  mod.rs
src-tauri/src/ffi/: fmod_sys.rs
src-web/: Cargo.toml
src-web/src/: lib.rs  player.rs
src/ffi/: fmod_sys.rs  mod.rs
tools/: Cargo.toml  generate_bindings.rs
