[package]
name = "driftwave-cpal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
driftwave-core = { path = "../src-core" }
cpal = "0.15"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }

[lib]
name = "driftwave_cpal"
path = "src/lib.rs"