[package]
name = "driftwave"
version = "0.1.0"
edition = "2021"
default-run = "driftwave"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
bindgen = "*"
symphonia = { version = "0.5.4", features = ["all"] }
wide = "0.7"
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1", features = [] }
