[package]
name = "driftwave"
version = "0.1.0"
edition = "2024"
default-run = "driftwave"



[features]
custom-protocol = ["tauri/custom-protocol"]


[dependencies]
bindgen = "*"
symphonia = { version = "0.5.4", features = ["all"] }
wide = "0.7"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
